[gd_scene load_steps=4 format=3 uid="uid://dvviil6oqj26s"]

[ext_resource type="Script" path="res://stations/station_elements/head_dials.gd" id="1_0askw"]
[ext_resource type="Texture2D" uid="uid://cxmoelru2p2w4" path="res://sprites/hi.png" id="2_x460x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pkoxo"]
radius = 20.0998

[node name="HeadDials" type="Node2D"]
script = ExtResource("1_0askw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_x460x")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pkoxo")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
